@@ -1,7 +1,7 @@
 AM_CFLAGS = @C_WFLAGS@
 
 bin_PROGRAMS =	proj nad2bin geod cs2cs
-EXTRA_PROGRAMS = multistresstest
+EXTRA_PROGRAMS = multistresstest test228
 
 INCLUDES =	-DPROJ_LIB=\"$(pkgdatadir)\" \
 		-DMUTEX_@MUTEX_SETTING@ @JNI_INCLUDE@
@@ -16,12 +16,14 @@ cs2cs_SOURCES = cs2cs.c gen_cheb.c p_series.c
 nad2bin_SOURCES = nad2bin.c
 geod_SOURCES = geod.c geod_set.c geod_interface.c geod_interface.h
 multistresstest_SOURCES = multistresstest.c
+test228_SOURCES = test228.c
 
 proj_LDADD = libproj.la
 cs2cs_LDADD = libproj.la
 nad2bin_LDADD = libproj.la
 geod_LDADD = libproj.la
 multistresstest_LDADD = libproj.la -lpthread
+test228_LDADD = libproj.la -lpthread
 
 lib_LTLIBRARIES = libproj.la
 
